# web3toolkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  npm-grunt.yml
_archive/angular-app/: README.md  karma.conf.js  package-lock.json  tsconfig.app.json  tsconfig.json
_archive/angular-app/src/: index.html  polyfills.ts  styles.scss
_archive/docs/: Notes.md  devsetup.md
docs/: DEVELOPMENT.md  Notes.md
docs/implementationdocu/: w3tk-overview.drawio  ~$w3tk-overview.drawio.dtmp
scripts/: sync-version.mjs
src/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/about/: page.tsx
src/app/automator/: page.tsx
src/app/tools/: layout.tsx  page.tsx
src/components/: ActionsInUse.tsx  BigIntPolyfill.tsx  InputOutput.tsx  NetworkFromUrl.tsx  ThemeProvider.tsx  ToolsSidebar.tsx
src/components/layout/: ActionCard.tsx  MainHeader.tsx  Sidebar.tsx  Sidenav.tsx
src/components/tools/: FormField.tsx  LoadingButton.tsx  OutputDisplay.tsx  SeedDerivationFields.tsx  ToolCard.tsx  index.ts
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  textarea.tsx
src/lib/: polyfills.ts  store.test.ts  store.ts  tools-data.ts
src/lib/actions/: action.ts  actions.ts  getBalance.ts  isValidSeedPhrase.ts  sendTransaction.ts
src/src/: index.html  main.ts  styles.scss
(+159 files in other folders)
