[package]
name = "web3toolkit"
version = "2.0.0"
description = "Web3 utility toolkit for EVM-compatible chains"
authors = ["a31labs"]
license = "MIT"
repository = "https://github.com/arminreiter/web3toolkit"
homepage = "https://web3toolkit.app"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
